--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "predeploy": "npm run build",
     "deploy": "netlify deploy -p",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --delay 300 --port 4040"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
